<resources>
    <string name="app_name">ToDoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_todo">Add Todo</string>
    <string name="task">Input a task here</string>
    <string name="status">Status:</string>
    <string name="pending">Pending</string>
    <string name="done">Done</string>
    <string name="photo">Photo</string>
    <string name="notify">Notify Me</string>
    <string name="five_minutes">in 5 mins</string>
    <string name="ten_minutes">in 10 mins</string>
    <string name="invalid">"Task field must not be empty. "</string>
    <string name="channel_name">"Channel Name "</string>
    <string name="channel_id">"Channel ID "</string>
    <string name="notification_title">Reminder for this task</string>
    <string name="delete_title">Delete</string>
    <string name="delete_message">Are you sure you want to delete this task?</string>
    <string name="camera_title">Task Image</string>
    <string name="camera_message">Select desired image source.</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="select_picture">Select Picture</string>
    <integer name="five_minutes_millis">300000</integer>
    <integer name="ten_minutes_millis">600000</integer>
</resources>